package org.himanshu.model.account;

public enum AccountStatus {
    ACTIVE,
    CLOSED,
    BLOCKED,
    BLACKLISTED,
}
