package org.himanshu.model.account;

public enum AccountType {
    USER,
    ADMIN,
    DRIVER
}
