package org.himanshu.model.account;

public enum LicenseType {
    MC,
    MCWG,
    LMV,
    HMV,
}

